# swarm-mesh

./: Cargo.toml  README.md  node.sh
apps/mesh-registry/: Cargo.toml
apps/mesh-registry/src/: main.rs
apps/node/: Cargo.toml
apps/node/src/: main.rs
crates/log/: Cargo.toml
crates/log/src/: lib.rs
crates/mesh/: Cargo.toml
crates/mesh/src/: errors.rs  lib.rs  message.rs  peer.rs  rtt.rs
crates/node/: Cargo.toml
crates/node/src/: connection.rs  lib.rs  metrics.rs  node.rs  state.rs
crates/noise/: Cargo.toml
crates/noise/src/: lib.rs
crates/registry/: Cargo.toml
crates/registry/src/: lib.rs
docker/: README.md  docker-compose.yml
docker/grafana/provisioning/dashboards/: swarm-mesh-dashboard.json
docker/grafana/provisioning/datasources/: datasources.yml
docker/prometheus/: prometheus.yml
node/: Cargo.toml
node/src/: main.rs
