[workspace]
resolver = "2"
members = [
    "node"
]

[workspace.dependencies]
anyhow = "1.0"
bincode = "1.3.3"
bytemuck = "1.23.1"
hex = "0.4.3"
rand = "0.9.1"
tokio = { "version" = "1.0", "features" = ["full"] }
serde = { "version" = "1.0", "features" = ["derive"] }
snow = "0.9.6"
socket2 = { version = "0.6.0", features = ["all"] }
thiserror = "2.0.12"