[workspace]
resolver = "2"
members = [
    "apps/node", "crates/mesh",
    "crates/node", "crates/noise",
]

[workspace.dependencies]
anyhow = "1.0"
bincode = "1.3.3"
hex = "0.4.3"
rand = "0.9.1"
tokio = { "version" = "1.0", "features" = ["full"] }
serde = { "version" = "1.0", "features" = ["derive"] }
snow = "0.9.6"
socket2 = { version = "0.6.0", features = ["all"] }
thiserror = "2.0.12"
tracing = { version ="0.1.41" }
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter", "json"] }
