[workspace]
resolver = "2"
members = [
    "apps/node",
    "apps/mesh-registry",
    "crates/log",
    "crates/mesh",
    "crates/node",
    "crates/noise",
    "crates/registry",
]

[workspace.dependencies]
anyhow = "1.0"
axum = "0.8.4"
bincode = "1.3.3"
clap = { version = "4.5.41", features = ["derive"] }
futures = "0.3.31"
hex = "0.4.3"
prometheus = "0.14.0"
rand = "0.9.1"
serde = { "version" = "1.0", "features" = ["derive"] }
serde_json = "1.0.140"
snow = "0.9.6"
socket2 = { version = "0.6.0", features = ["all"] }
thiserror = "2.0.12"
tokio = { "version" = "1.0", "features" = ["full"] }
tracing = { version ="0.1.41" }
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter", "json"] }
