[package]
name = "node"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
bytemuck = { workspace =  true, features = ["derive"] }
hex = { workspace = true }
rand = { workspace = true }
serde = { workspace = true}
snow = { workspace =  true}
socket2 = { workspace = true, features = ["all"] }
thiserror = { workspace = true }
tokio = { workspace = true }
