[package]
name = "mesh-registry"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace =  true}
axum = { workspace = true }
clap = { workspace = true, features = ["derive"] }
log = { path = "../../crates/log" }
mesh = { path = "../../crates/mesh" }
registry = { path = "../../crates/registry" }
reqwest = { version = "0.12", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
