[package]
name = "node-svc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
hex = { workspace = true }
mesh = { path = "../../crates/mesh" }
node = { path = "../../crates/node" }
noise = { path = "../../crates/noise" }
rand = { workspace = true }
snow = { workspace =  true}
socket2 = { workspace = true, features = ["all"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter", "json"]}

