[package]
name = "node"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
futures = { workspace = true }
mesh = { path = "../mesh" }
noise = { path = "../noise" }
snow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
